--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonar --info
+        run: ./gradlew sonar --info
 
   test:
     name: Project auto test
@@ -128,7 +128,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: jar-file
-          path: .
+          path: build/libs/
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
