build: adjusting deployment workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,13 @@ jobs:
         working-directory: ${{ github.workspace }}
 
       - name: Copy Jar file
-        run: mv build/libs/*.jar app.jar
+        run: mv build/libs/*.jar build/libs/app.jar
 
       - name: Upload Jar file
         uses: actions/upload-artifact@v2
         with:
           name: jar-file
-          path: app.jar
+          path: build/libs/app.jar
 
   sonarCloud:
     name: Sonar Analyze
@@ -129,6 +129,9 @@ jobs:
         with:
           name: jar-file
           path: build/libs/
+
+      - name: List downloaded artifacts
+        run: ls -l build/libs/
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
